--- a/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
+++ b/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
@@ -381,11 +381,6 @@
                                 <rect key="frame" x="8" y="129" width="304" height="429"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" id="513" restorationIdentifier="shPesquisa">
-                                <rect key="frame" x="0.0" y="55" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -393,7 +388,6 @@
                         <outlet property="MapaView" destination="466" id="name-outlet-466"/>
                         <outlet property="mkmMapa" destination="478" id="vet-o8-78c"/>
                         <outlet property="searchDisplayController" destination="482" id="481"/>
-                        <outlet property="shPesquisa" destination="513" id="name-outlet-513"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="467" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -458,6 +452,8 @@
         <image name="Icons/woman.png" width="30" height="30"/>
         <image name="Icons/water hose.png" width="30" height="30"/>
         <image name="Icons/search.png" width="30" height="30"/>
+        <image name="PinMap.png" width="170" height="397"/>
+        <image name="Pin50.png" width="21" height="50"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
