--- a/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
+++ b/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
@@ -55,7 +55,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.95686274509803926" green="0.90980392156862744" blue="0.94117647058823528" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" colorSpace="calibratedRGB" red="0.95294117647058818" green="0.94901960784313721" blue="0.95686274509803926" alpha="1"/>
                     </view>
                     <connections>
                         <outlet property="btnFacebook" destination="8" id="Qzk-Tz-MKQ"/>
@@ -144,8 +144,8 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="483"/>
                                 <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" id="391">
-                                        <rect key="frame" x="98" y="20" width="124" height="98"/>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" id="391" image="Profille.png">
+                                        <rect key="frame" x="120" y="49" width="93" height="78"/>
                                         <autoresizingMask key="autoresizingMask" heightSizable="YES" widthSizable="YES"/>
                                     </imageView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nome" minimumFontSize="17" id="392">
@@ -220,7 +220,7 @@
                                 </subviews>
                             </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="0.74117647058823533" green="1" blue="0.39215686274509803" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                     </view>
                     <connections>
                         <outlet property="PerfilView" destination="388" id="name-outlet-388"/>
@@ -283,7 +283,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <subviews>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="648" fixedFrame="YES" restorationIdentifier="txtBuscaUsuarios" placeholder="Digite o Nome o Usuário" textAlignment="center">
-                                        <rect key="frame" x="13" y="8" width="282" height="30"/>
+                                        <rect key="frame" x="0.0" y="8" width="303" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -292,7 +292,7 @@
                                         </connections>
                                     </textField>
                                     <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="622" fixedFrame="YES" restorationIdentifier="scrListaUsuarios">
-                                        <rect key="frame" x="13" y="46" width="282" height="201"/>
+                                        <rect key="frame" x="0.0" y="46" width="303" height="201"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="628" fixedFrame="YES" restorationIdentifier="tblUsuarios">
@@ -335,11 +335,20 @@
                                 </subviews>
                             </view>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="686" fixedFrame="YES" restorationIdentifier="mapUsuario" customModule="mapUsuario">
-                                <rect key="frame" x="8" y="497" width="303" height="50"/>
+                                <rect key="frame" x="8" y="497" width="303" height="19"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="698" fixedFrame="YES" restorationIdentifier="btnAbreChamado">
+                                <rect key="frame" x="8" y="518" width="303" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="0.41960784313725491" green="0.596078431372549" blue="1" alpha="1"/>
+                                <state key="normal" title="Abrir Chamado">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                            </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.5607843137254902" green="0.81176470588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
                     </view>
                     <connections>
                         <outlet property="pckServico" destination="405" id="name-outlet-405"/>
@@ -350,6 +359,7 @@
                         <outlet property="tblUsuarios" destination="628" id="name-outlet-628"/>
                         <outlet property="txtBuscaUsuarios" destination="648" id="name-outlet-648"/>
                         <outlet property="mapUsuario" destination="686" id="name-outlet-686"/>
+                        <outlet property="btnAbreChamado" destination="698" id="name-outlet-698"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="403" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -511,6 +521,7 @@
         <image name="Icons/search.png" width="30" height="30"/>
         <image name="PinMap.png" width="170" height="397"/>
         <image name="Pin50.png" width="21" height="50"/>
+        <image name="Profille.png" width="256" height="256"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
