--- a/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
+++ b/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
@@ -34,7 +34,6 @@
                                 </state>
                                 <connections>
                                     <action selector="btnLoga_Click:" destination="vXZ-lx-hvc" eventType="touchDown" id="16"/>
-                                    <segue destination="29" kind="modal" id="134"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="8">
@@ -577,7 +576,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="821" fixedFrame="YES" placeholder="Endereço">
-                                <rect key="frame" x="17" y="278" width="289" height="30"/>
+                                <rect key="frame" x="17" y="278" width="217" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -609,6 +608,9 @@
                             <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" fixedFrame="YES" id="827">
                                 <rect key="frame" x="17" y="89" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="swtPrincipal_Changed:" destination="771" id="940" eventType="valueChanged"/>
+                                </connections>
                             </switch>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Principal ?" lineBreakMode="tailTruncation" minimumFontSize="10" id="828" fixedFrame="YES">
                                 <rect key="frame" x="80" y="94" width="86" height="21"/>
@@ -619,7 +621,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="829" fixedFrame="YES">
-                                <rect key="frame" x="16" y="406" width="289" height="109"/>
+                                <rect key="frame" x="16" y="398" width="289" height="161"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -645,7 +647,7 @@
                                         <rect key="frame" x="0.0" y="110" width="289" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="835" tableViewCell="834">
-                                            <rect key="frame" x="0.0" y="0.0" width="289" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="289" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
@@ -653,7 +655,7 @@
                                 </prototypes>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="837" fixedFrame="YES">
-                                <rect key="frame" x="16" y="360" width="94" height="30"/>
+                                <rect key="frame" x="212" y="356" width="94" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.35686274509803922" green="0.70980392156862748" blue="1" alpha="1"/>
                                 <state key="normal" title="Cancelar">
@@ -665,7 +667,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="838" fixedFrame="YES">
-                                <rect key="frame" x="113" y="360" width="94" height="30"/>
+                                <rect key="frame" x="17" y="356" width="94" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" colorSpace="calibratedRGB" red="0.65490196078431373" green="1" blue="0.32549019607843138" alpha="1"/>
                                 <state key="normal" title="Gravar">
@@ -677,9 +679,9 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="840" fixedFrame="YES">
-                                <rect key="frame" x="211" y="360" width="94" height="30"/>
+                                <rect key="frame" x="115" y="356" width="94" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" colorSpace="calibratedRGB" red="1" green="0.796078431372549" blue="0.23137254901960785" alpha="1"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="1" green="0.95294117647058818" blue="0.50588235294117645" alpha="1"/>
                                 <state key="normal" title="Excluir">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -702,6 +704,24 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" id="921" fixedFrame="YES" placeholder="Nº">
+                                <rect key="frame" x="242" y="278" width="63" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="934" fixedFrame="YES">
+                                <rect key="frame" x="188" y="202" width="62" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" colorSpace="calibratedRGB" red="0.29411764705882354" green="0.63921568627450975" blue="1" alpha="1"/>
+                                <state key="normal" title="Buscar">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" colorSpace="calibratedWhite" white="1" alpha="1"/>
+                                </state>
+                                <connections>
+                                    <action selector="BtnBuscaCep_Click:" destination="771" id="935" eventType="touchDown"/>
+                                </connections>
+                            </button>
                         </subviews>
                     </view>
                     <connections>
@@ -717,11 +737,13 @@
                         <outlet property="btnExclui" destination="840" id="name-outlet-840"/>
                         <outlet property="swtAtual" destination="892" id="name-outlet-892"/>
                         <outlet property="swtPrincipal" destination="827" id="name-outlet-827"/>
+                        <outlet property="txtNumero" destination="921" id="name-outlet-921"/>
+                        <outlet property="btnBuscaCep" destination="934" id="name-outlet-934"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="773" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-145" y="972"/>
+            <point key="canvasLocation" x="-145" y="931"/>
         </scene>
     </scenes>
     <resources>
