--- a/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
+++ b/SeverinoApp.iOS/MainStoryboard_iPhone.storyboard
@@ -202,7 +202,6 @@
                                                 <color key="maximumTrackTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <connections>
                                                     <action selector="sldRaioAtendimento_Changed:" destination="387" eventType="valueChanged" id="536"/>
-                                                    <action selector="sldRaioAtendimento_EditingEnd:" destination="387" id="968" eventType="editingDidEnd"/>
                                                 </connections>
                                             </slider>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" fixedFrame="YES" text="Raio de Atendimento: " lineBreakMode="tailTruncation" minimumFontSize="10" id="535">
@@ -420,6 +419,9 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="btnAbreChamado_Click:" destination="401" id="990" eventType="touchDown"/>
+                                </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="10" minValue="0.0" maxValue="50" id="953" fixedFrame="YES" continuous="NO">
                                 <rect key="frame" x="8" y="205" width="303" height="31"/>
@@ -427,7 +429,6 @@
                                 <color key="maximumTrackTintColor" colorSpace="calibratedRGB" red="1" green="0" blue="0" alpha="1"/>
                                 <connections>
                                     <action selector="sldRaio_Changed:" destination="401" id="955" eventType="valueChanged"/>
-                                    <action selector="sldRaioEditingEnd:" destination="401" id="969" eventType="editingDidEnd"/>
                                 </connections>
                             </slider>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Raio: " lineBreakMode="tailTruncation" minimumFontSize="10" id="954" fixedFrame="YES">
